--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title: My Resume
-url: 'http://webjeda.com'
+url: 'http://javiermino.com'
 baseurl: '/online-cv' #change it according to your repository name
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
@@ -11,25 +11,26 @@ baseurl: '/online-cv' #change it according to your repository name
 #style: styles-6
 
 #Profile information
-name: Alan Doe
+name: Javier Mino
 tagline: Full Stack Developer
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
-commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.'
+pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+summary: 'I am a self taught and highly motivated software developer.
+My passions are learning software design and traveling and I have forged my career arround them.
+I have worked developing high volumen enterprise Java applications for six years,
+with a wide vairety of technologies. I also do little experiments on Angular on my free time.
+I love to make code experiments and get them on github.'
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+#email: hello@webjeda.com
+#phone: 012 345 6789
+#website: blog.webjeda.com #do not add http://
+linkedin: javiersvg
+github: javiersvg
+twitter: '@javiersvg'
 #Update all the sections by editing the files inside _data folder.
 
 # Tracker
-analytics: UA-83979019-1
+#analytics: UA-83979019-1
 
 # Build settings
 encoding: "utf-8"
