--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,8 +1,4 @@
 - education:
-  degree: MSc in Computer Science
-  university: University of London
-  time: 2011 - 2012
-- education:
-  degree: BSc in Applied Mathematics
-  university: Bristol University
-  time: 2007 - 2011
+  degree: Computers ingeniering (Incomplete)
+  university: Universidad Tecnologica Nacional
+  time: 2006 - 2012
