--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,9 +1,4 @@
 - interest:
-  item: Climbing
-  link:
+  item: Traveling
 - interest:
-  item: Snowboarding
-  link:
-- interest:
-  item: Cooking
-  link:
+  item: Futbol
