add minimal improvenemts

--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,4 +1,4 @@
 - education:
-  degree: Computers ingeniering (Incomplete)
+  degree: Information Systems Engineering (Incomplete)
   university: Universidad Tecnologica Nacional
   time: 2006 - 2012
