--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -8,6 +8,9 @@
   name: J2EE
   level: 98%
 - skill:
+  name: Automated testing (unit and integration)
+  level: 80%
+- skill:
   name: HTML5 & CSS
   level: 15%
 - skill:
