--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -2,18 +2,19 @@
   role: Lead Developer
   time: 2016 - Present
   company: Globant, Cordoba
-  details: "I have worked dessigning solutions and working with others to implement them.
-  Also focusing on removing blockers and solving questions and issues other developers 
-  might have."
+  details: "I have worked dessigning solutions and working with others to implement them
+  in the Southest Airlines account. Also focusing on removing blockers and solving questions
+  and issues other developers might have."
 - experience:
   role: Senior Java developer
   time: 2014 - 2015
   company: Globant, Cordoba
   details: "I worked developing high data volume enterprise Java applications with several
-  technologies. This applications where back-end focused."
+  technologies in the Southest Airlines account. These applications were back-end focused."
 - experience:
   role: Jr Java Developer
   time: 2012 - 2014
   company: Globant, Cordoba
-  details: "I have worked with several project with defining and implementing atomated
-  testing frameworks. I worked with Groovy and Java testing web and Java swing apps."
+  details: "I have worked with several projects with defining and implementing atomated
+  testing frameworks in the Southest Airlines account. I worked with Groovy and Java testing
+  web and Java swing apps."
