--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,5 +3,5 @@
 
 - project:
   title: Tour of heroes
-  link: "#/tour-of-heores"
-  tagline: "A spring security application to log in users with credentials obtained with the Google java script library."
+  link: "/tour-of-heores"
+  tagline: "A spring security application to log in users with credentials obtained with the Google javascript library."
