add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter: '@javiersvg'
 #Update all the sections by editing the files inside _data folder.
 
 # Tracker
-#analytics: UA-83979019-1
+analytics: UA-7096408-2
 
 # Build settings
 encoding: "utf-8"
